Fix: Explicit CORS policy for Vercel production domain